# ChatNova

./: .env.example  .gitignore  AGENTS.md  DESIGN.html  DOCKER_SETUP.md  README.md  docker-compose.yml  handoff.md  main.py  package.json  pnpm-lock.yaml  pyproject.toml  pytest.ini  run_tests_with_coverage.sh
backend/: alembic.ini  requirements.txt  run_migrations.py
backend/alembic/: env.py
backend/alembic/versions/: 12c0b98ff310_create_search_history_table.py  1438e3bc91b5_add_custom_instructions_to_users.py  2b7f9d8e5a1c_add_file_path_to_session_documents.py  331904c9c90e_add_usermcpserver_model.py  3bff5f5bc4c8_add_session_id_column_to_messages_table.py  5d8e4f2c9a1b_add_token_blacklist_table.py  7e2f4b9a1c3d_add_ui_data_to_messages.py  87fbb1b8c005_update_mcp_server_schema.py  9790ecd14c4e_add_userapikey_model.py  a1b2c3d4e5f6_create_messages_table.py  abcd1234ef56_add_processing_status_to_session_documents.py  b24088d2d97a_create_users_table.py  cbdc66c5ab65_create_document_tables.py  cf67e6d30a3a_enable_pgvector_extension.py  def123456789_add_last_logout_all_at_to_users.py  (+2 more)
backend/app/: __init__.py  database.py  main.py  mcp.json
backend/tests/: conftest.py
conductor/: product-guidelines.md  product.md  tech-stack.md  tracks.md
docs/: design.md
frontend/: package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.js
frontend/src/: App.tsx  index.css  main.tsx
tests/: conftest.py
tests/integration/: test_chat_endpoints.py  test_chat_key_validation.py
tests/unit/: test_message_crud.py  test_session_crud.py  test_user_crud.py
(+180 files in other folders)
