[project]
name = "ChatNova"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.16.5",
    "fastapi>=0.118.2",
    "httpx>=0.28.1",
    "langchain>=0.3.27",
    "langchain-cerebras>=0.5.0",
    "langchain-google-genai>=2.1.12",
    "langchain-groq>=0.3.8",
    "langchain-mcp-adapters>=0.1.11",
    "mcp-use>=1.3.11",
    "passlib[bcrypt]>=1.7.4",
    "psycopg2-binary>=2.9.10",
    "pydantic>=2.12.0",
    "pydantic-settings>=2.11.0",
    "python-dotenv>=1.1.1",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.20",
    "sqlalchemy>=2.0.43",
    "uvicorn[standard]>=0.37.0",
    "psutil>=6.1.1",
    "aiohttp>=3.12.3",
    "cryptography>=46.0.2",
    "bcrypt>=5.0.0",
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "slowapi>=0.1.9",
    "bleach>=6.3.0",
    "langchain-community>=0.3.31",
    "duckduckgo-search>=4.5.0",
    "ddgs>=9.9.3",
    "flask>=3.1.2",
    "pytest-asyncio>=1.2.0",
    "google-genai>=1.60.0",
    "pillow>=12.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.6",
    "pytest-asyncio>=0.25.3",
    "black>=25.1.0",
    "flake8>=7.1.1",
]

[dependency-groups]
dev = [
    "pytest-asyncio>=1.2.0",
]
